# blitztext-app

./: .gitignore  CHANGELOG.de.md  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  README.de.md  README.md  ROADMAP.de.md  ROADMAP.md  SECURITY.de.md  SECURITY.md  SUPPORT.de.md  SUPPORT.md  THIRD-PARTY-NOTICES.de.md  THIRD-PARTY-NOTICES.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
docs/: Projektstatus.md  github-settings.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.cuda.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  credentials.rs  lib.rs  llm.rs  main.rs  overlay.rs  paste.rs  prompts.rs  quality.rs  settings.rs  transcription.rs  workflows.rs
src/lib/: api.ts
src/routes/: +page.svelte
static/: overlay.html
