[package]
name = "blitztext-win"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blitztext_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
keyring = { version = "3", features = ["windows-native"] }
arboard = "3"
enigo = "0.3"
cpal = "0.15"
hound = "3"
futures-util = "0.3"
whisper-rs = "0.16"

# Win32 für das Sprech-Overlay (Positionierung über Taskleiste + kein Fokusklau)
# und die Terminal-Erkennung beim Einfügen (Vordergrund-Prozessname).
# Version an Tauris `windows`-Crate angeglichen, um Doppelung zu vermeiden.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[features]
# GPU-Beschleunigung via CUDA. Build mit: `pnpm tauri build --features cuda`
# (bzw. `cargo build --features cuda`). Aktiviert zugleich Beam-Search in der
# Transkription (siehe transcription.rs). Benötigt installiertes CUDA-Toolkit.
cuda = ["whisper-rs/cuda"]

